# raman-outlier-detector

./: README.md  main.py  pyproject.toml
data/: testdata.csv
